--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,11 @@ spring.application.name=apilist
 logging.level.web=debug
 #logging.level.org.springframework.jdbc.datasource.init=trace
 
-spring.datasource.url=jdbc:postgresql://db:5432/apilist
+spring.datasource.url=jdbc:postgresql://db-service:5432/apilist
 spring.datasource.username=postgres
 spring.datasource.password=1234
 
-spring.flyway.locations=classpath:db/migration,classpath:db/testdata
+spring.flyway.locations=classpath:db/migration
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
