--- a/src/main/resources/flyway.properties
+++ b/src/main/resources/flyway.properties
@@ -1,3 +1,3 @@
-flyway.url=jdbc:postgresql://db:5432/apilist
+flyway.url=jdbc:postgresql://db-service:5432/apilist
 flyway.user=postgres
 flyway.password=1234
