--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -4,7 +4,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-spring.flyway.locations=classpath:db/migration,classpath:db/testdata
+spring.flyway.locations=classpath:db/migration-test
 
 spring.jpa.open-in-view=false
 
@@ -17,7 +17,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.sql.init.mode=embedded
 spring.sql.init.platform=h2
 
-spring.sql.init.schema-locations=classpath:db/data.sql
+#spring.sql.init.schema-locations=classpath:db/data.sql
 #classpath:db/schema.sql,
 
 
