--- a/compose.yaml
+++ b/compose.yaml
@@ -31,8 +31,8 @@ services:
       POSTGRES_DB: apilist
     volumes:
       - ./src/main/resources/db/startDB/01-createDB.sql:/docker-entrypoint-initdb.d/01-createDB.sql
-      - ./src/main/resources/db/startDB/02-createTables.sql:/docker-entrypoint-initdb.d/02-createTables.sql
-      - ./src/main/resources/db/startDB/03-insertData.sql:/docker-entrypoint-initdb.d/03-insertData.sql
+#      - ./src/main/resources/db/startDB/02-createTables.sql:/docker-entrypoint-initdb.d/02-createTables.sql
+#      - ./src/main/resources/db/startDB/03-insertData.sql:/docker-entrypoint-initdb.d/03-insertData.sql
       - postgres_data:/var/lib/postgresql/data/
     restart: always
     healthcheck:
