--- a/k8s/deployPostgre.yaml
+++ b/k8s/deployPostgre.yaml
@@ -1,7 +1,13 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: nsdatabase
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: db-deployment
+  namespace: nsdatabase
 spec:
   replicas: 1
   selector:
@@ -49,6 +55,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: db-service
+  namespace: nsdatabase
 spec:
   selector:
     app: db
@@ -64,6 +71,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: postgres-pvc
+  namespace: nsdatabase
 spec:
   accessModes:
     - ReadWriteOnce
@@ -75,6 +83,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: db-init-scripts
+  namespace: nsdatabase
 data:
   01-createDB.sql: |
     SELECT 'CREATE DATABASE apilist' WHERE NOT EXISTS (SELECT FROM pg_database WHERE datname = 'apilist')\gexec
