--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,34 @@
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-webflux</artifactId>
-		</dependency>		
+		</dependency>
+				
+		<dependency>
+		    <groupId>com.maciejwalkowiak.spring</groupId>
+		    <artifactId>spring-boot-startup-report</artifactId>
+		    <version>0.2.0</version>
+		    <optional>true</optional>
+		</dependency>				
+				
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-authorization-server</artifactId>
+		</dependency>
+
+		<dependency>
+		    <groupId>com.auth0</groupId>
+		    <artifactId>java-jwt</artifactId>
+		    <version>4.4.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
