--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,19 +2,19 @@ spring.application.name=apilist
 logging.level.web=debug
 #logging.level.org.springframework.jdbc.datasource.init=trace
 
-spring.datasource.url=jdbc:postgresql://db-service:5432/apilist
-spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/apilist
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.flyway.baseline-on-migrate=true
-
 
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 management.endpoint.prometheus.access=unrestricted
+
+
