--- a/src/main/resources/flyway.properties
+++ b/src/main/resources/flyway.properties
@@ -1,3 +1,3 @@
-flyway.url=jdbc:postgresql://db-service:5432/apilist
-flyway.user=postgres
-flyway.password=1234
+flyway.url=jdbc:postgresql://${DB_HOST}:5432/apilist
+flyway.user=${DB_USER}
+flyway.password=${DB_PASSWORD}
