--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=apilist
 logging.level.web=debug
 #logging.level.org.springframework.jdbc.datasource.init=trace
 
+spring.sql.init.continue-on-error=true
+
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/apilist
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=${DB_USER}
@@ -14,7 +16,27 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
 
 management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=always
-management.endpoint.prometheus.access=unrestricted
+#management.endpoints.web.exposure.exclude=info,beans
+#management.endpoints.access.default=none
+#management.endpoint.info.access=read-only
 
+management.endpoint.health.show-details=when-authorized
+#management.endpoint.health.group.health-group.include=ping,diskSpace
+#management.endpoints.web.base-path=/manage
+#management.endpoints.web.base-path=/
+#management.endpoints.web.path-mapping.health=healthcheck
+
+#----------------------
+info.app.name=@project.name@
+info.app.description=@project.description@
+info.app.version=@project.version@
+info.app.java.version=@java.version@
+
+info.build-timestamp=@maven.build.timestamp@
+#----------------------
+
+
+#management.endpoint.prometheus.access=unrestricted
+
+#spring.security.user.name=admin
 
