--- a/compose.yaml
+++ b/compose.yaml
@@ -14,6 +14,8 @@ services:
     environment:
       API_VERSION: 9.1.9
       DB_HOST: db
+      DB_USER: postgres
+      DB_PASSWORD: 1234
 #    env_file:
 #      - ../apilist/dev.env
     networks:
@@ -55,6 +57,18 @@ services:
 #        restart: true
     networks:
       - apilist_net
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./src/main/resources/prometheus.yaml:/etc/prometheus/prometheus.yaml
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yaml"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
 networks:
   apilist_net:
