--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,10 +1,11 @@
 name: CI-CD
 on: 
   push:
-    branches: [""]
+    branches: ["main"]
   workflow_dispatch:
 jobs:
   CI:
+    name: "primeiro job"
     runs-on: ubuntu-latest
     steps: 
       - name: obtendo o código
