--- a/.github/workflows/intalar-node.yml
+++ b/.github/workflows/intalar-node.yml
@@ -17,4 +17,7 @@ jobs:
 
       - name: "verificando versão do node depois de instalar"
         run: node --version
-        
+      - uses: chill-viking/npm-ci@latest
+        name: Install dependencies
+        with:
+          working_directory: 'apilist/front/apilist-front/'
