--- a/.github/workflows/intalar-node.yml
+++ b/.github/workflows/intalar-node.yml
@@ -20,4 +20,4 @@ jobs:
       - uses: chill-viking/npm-ci@latest
         name: Install dependencies
         with:
-          working_directory: 'apilist/front/apilist-front/'
+          working_directory: './front/apilist-front/'
